Remove test events (San Diego Comic-Con and New York Toy Fair)
