# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import cartRouter from "./cart";
 import ordersRouter from "./orders";
 import contactRouter from "./contact";
 import adminRouter from "./admin";
+import appearancesRouter from "./appearances";
 
 const router: IRouter = Router();
 
@@ -14,5 +15,6 @@ router.use(cartRouter);
 router.use(ordersRouter);
 router.use(contactRouter);
 router.use(adminRouter);
+router.use(appearancesRouter);
 
 export default router;
